[workspace]
resolver = "2"
members = ["crowdfund"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.8"

# Optimize the built wasm for on-chain size + cost.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
